# rust-postgres-interval

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/: interval_norm.rs  iso_8601.rs  lib.rs  pg_formatter.rs  pg_interval.rs  pg_interval_add.rs  pg_interval_extract.rs  pg_interval_sub.rs  postgres.rs
src/integrations/: duration.rs  mod.rs  naive_date_time.rs  rust_postgres.rs
src/interval_fmt/: iso_8601.rs  mod.rs  postgre_style.rs  postgres.rs  sql.rs
src/interval_parse/: iso_8601.rs  mod.rs  parse_error.rs  postgres.rs  sql.rs
src/services/: rust_postgres.rs
tests/: test.rs
