[package]
name = "pg_interval"
version = "0.4.3"
edition = "2018"
authors = ["Ryan Piper <piper.ryan235@gmail.com>", "Ning Sun <n@sunng.info>"]
license = "MIT"
description = "A native PostgreSQL interval type"
repository = "https://github.com/piperRyan/rust-postgres-interval"
readme = "README.md"
keywords = ["database", "postgres", "postgresql", "sql", "interval"]
include = ["src/*", "Cargo.toml", "LICENSE", "README.md"]
categories = ["date-and-time"]

[features]
default = ["postgres"]
postgres = ["postgres-types"]

[dependencies]
chrono = { version = "^0.4" }
bytes = { version = "^1" }
postgres-types = { version = "^0.2", optional = true }
