[package]
name = "pg_interval"
version = "0.4.5"
edition = "2024"
authors = ["Ryan Piper <piper.ryan235@gmail.com>"]
license = "MIT"
description = "A native PostgreSQL interval type"
repository = "https://github.com/piperRyan/rust-postgres-interval"
readme = "README.md"
keywords = ["database", "postgres", "postgresql", "sql", "interval"]
include = ["src/*", "Cargo.toml", "LICENSE", "README.md"]
categories = ["date-and-time"]

[features]
default = ["postgres"]
postgres = ["postgres-types"]

[dependencies]
chrono = { version = "^0.4" }
bytes = { version = "^1" }
postgres-types = { version = "^0.2", optional = true }
